--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -21,6 +21,7 @@
         tools:ignore="ContentDescription" />
 
     <TextView
+        android:visibility="visible"
         android:id="@+id/text_date_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
