--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,7 +6,7 @@
     tools:context=".SplashScreenActivity">
 <TextView
     android:text="@string/app_name"
-    android:textSize="54dp"
+    android:textSize="54sp"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
