--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CinemaTXT" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.CinemaTXT" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <!-- Disable night mode. -->
+        <item name="android:forceDarkAllowed" tools:targetApi="q"> false </item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/cardview_dark_background</item>
         <item name="colorPrimaryVariant">@color/cardview_dark_background</item>
