--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.detail.DetailActivity">
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.CinemaTXT.AppBarOverlay">
@@ -57,4 +58,17 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_gravity="center"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fav_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:elevation="5dp"
+        android:src="@drawable/ic_favorite_selector"
+        app:layout_anchor="@+id/app_bar_layout"
+        app:layout_anchorGravity="bottom|end"
+        app:pressedTranslationZ="12dp"
+        android:contentDescription="@string/description"
+        android:clickable="true"
+        android:focusable="true" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
