--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="actionMenuTextColor">@color/design_default_color_primary</item>
     </style>
     <style name="Theme.CinemaTXT.NoActionBar">
         <item name="windowActionBar">false</item>
